# conduit-connector-sdk-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  buf.gen.yaml  pyproject.toml
.github/workflows/: compat-nightly.yml  lint.yml  release.yml  test.yml
docs/design/: 20260707-python-connector-sdk.md
examples/http-poll-source/: README.md  main.py  pyproject.toml
src/conduit/: __init__.py  _build.py  _cli.py  _dispatch.py  _handshake.py  _introspect.py  config.py  destination.py  errors.py  record.py  serve.py  source.py
src/conduit/_grpc/: __init__.py  _controller.py  adapters.py
src/conduit/_grpc/config/v1/: parameter_pb2.py  parameter_pb2.pyi
src/conduit/_grpc/connector/v2/: destination_pb2.py  destination_pb2.pyi  destination_pb2_grpc.py  source_pb2.py  source_pb2.pyi  source_pb2_grpc.py  specifier_pb2.py  specifier_pb2.pyi  specifier_pb2_grpc.py
src/conduit/_grpc/opencdc/v1/: opencdc_pb2.py  opencdc_pb2.pyi
src/conduit/testing/: README.md  __init__.py  acceptance.py  fixtures.py
tests/: test_acceptance_harness.py  test_build.py  test_config.py  test_configure_errors.py  test_destination.py  test_errors.py  test_example_http_poll_source.py  test_go_duration.py  test_handshake.py  test_record_codec.py  test_serve.py  test_source.py
tools/: generate-stubs.sh
